# Franka_Manipulation

./: README.md  requirements.txt
libfranka-python/: .gitignore  CMakeLists.txt  README.md  deploy_residual_policy.py  pd_control.py  pick_and_place.py  setup.py  sinusoidal_motion.py
libfranka-python/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
libfranka-python/Classical_Control/: impedance_control.py  inverse_kinematics_osc.py  pd_control.py
libfranka-python/Classical_Control/demos/: franka_pick_place.mov  franka_sinusoidal.mov
libfranka-python/Learned_Control/Behavior Cloning/: collect_data.py  run_policy.py  train_policy.py  trajectory_data.pkl  trajectory_policy.pth
libfranka-python/Learned_Control/Reinforcement Learning/: franka_env.py  reinforcement_learning.py
libfranka-python/Learned_Control/Residual Policy Learning/: residual_policy_learning.py  train_residual_policy.py
libfranka-python/examples/: active_control_example.py  motion_control_example.py  motion_generator_example.py
libfranka-python/franka_bindings/: CMakeCache.txt  __init__.py
libfranka-python/include/: franka_bindings.h
libfranka-python/include/realtime_control/: motion_generator.hpp  realtime_control.hpp  robot_state.hpp  shared_memory.hpp
libfranka-python/src/: franka_bindings.cpp  realtime_control.cpp
libfranka/src/: network.cpp
